--- a/styles/screen8.scss
+++ b/styles/screen8.scss
@@ -130,19 +130,21 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 182.52%;
-    text-align: left;
+    text-align: center;
     color: rgba(1, 9, 50, 0.85);
 
     @media screen and (min-width:1041px) {
       margin-top: 46px;
       font-size: 18px;
       max-width: 590px;
+      text-align: left;
     }
 
     @media screen and (min-width:1301px) {
       margin-top: 46px;
       font-size: 24px;
       max-width: 590px;
+      text-align: left;
     }
   }
 
